fix: use thread id method, not id method.